[gd_scene load_steps=11 format=2]

[ext_resource path="res://Enemies/Melee/EnemyMelee.gd" type="Script" id=1]
[ext_resource path="res://Enemies/Melee/undead_attack_exp.png" type="Texture" id=2]
[ext_resource path="res://GUI/Themes/day_theme.tres" type="Theme" id=3]
[ext_resource path="res://Levels/Scenery/BloodSplotch.png" type="Texture" id=4]
[ext_resource path="res://Enemies/Melee/DeadRobot.png" type="Texture" id=5]
[ext_resource path="res://Effects/hitNoise.wav" type="AudioStream" id=6]
[ext_resource path="res://Enemies/Melee/enemy_melee_walk.anim" type="Animation" id=7]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 32, 32 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 34, 34 )

[sub_resource type="Animation" id=3]
resource_name = "enemy_melee_attack"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 2 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.6, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0, 6, 1 ]
}

[node name="EnemyMelee" type="KinematicBody2D" groups=[
"enemies",
]]
collision_layer = 16
collision_mask = 11
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )
hframes = 7
frame = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 1 )

[node name="Label" type="Label" parent="."]
margin_left = -26.6
margin_top = -59.8501
margin_right = 27.4
margin_bottom = -39.8501
theme = ExtResource( 3 )
text = "Health: 5"

[node name="Hitbox" type="Area2D" parent="."]
visible = false
collision_layer = 16
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
shape = SubResource( 2 )

[node name="DeadBody" type="Node2D" parent="."]
visible = false

[node name="BloodSplotch" type="Sprite" parent="DeadBody"]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 4 )

[node name="CorpseDuration" type="Timer" parent="DeadBody"]
wait_time = 15.0

[node name="BrokenBody" type="Sprite" parent="DeadBody"]
scale = Vector2( 0.15, 0.15 )
texture = ExtResource( 5 )

[node name="HitNoise" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 6 )
volume_db = -9.0
bus = "SoundFX"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/enemy_melee_attack = SubResource( 3 )
anims/enemy_melee_walk = ExtResource( 7 )

[connection signal="timeout" from="DeadBody/CorpseDuration" to="." method="_on_CorpseDuration_timeout"]
